--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "transform": "babel src -d temp"
+    "transform": "babel src -d temp",
+    "dev": "webpack serve",
+    "build:dev": "webpack --mode=development",
+    "build": "webpack --mode=production"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "devDependencies": {
